--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
-Options +FollowSymLinks -Indexes -MultiViews
 AddDefaultCharset UTF-8
 
 <IfModule mod_rewrite.c>
@@ -8,17 +7,19 @@ AddDefaultCharset UTF-8
 	##you need to replace "/" by the correct directory, for example "RewriteBase /neofrag/"
 	RewriteBase /
 
+	RewriteRule index\.php - [L]
+
 	##Allow direct access to specific directories
 	#RewriteCond %{REQUEST_URI} ^/(dir1|dir2)/
 	#RewriteRule .* - [L,QSA]
 
-	RewriteCond %{REQUEST_URI} !^/backups/
+	RewriteCond %{REQUEST_URI} !^/(backups|cache|logs)/
 
 	##Allow direct access to specific files
 	#RewriteCond %{REQUEST_FILENAME} /file1\.php [OR]
 	#RewriteCond %{REQUEST_FILENAME} /file2\.php [OR]
 
-	RewriteCond %{REQUEST_FILENAME} \.(png|jpg|jpeg|gif|swf|eot|svg|ttf|woff|woff2|zip)$
+	RewriteCond %{REQUEST_FILENAME} !\.(css|js|php)$
 	RewriteCond %{REQUEST_FILENAME} -f
 	RewriteRule .* - [L,QSA]
 
